--- a/regexp.html
+++ b/regexp.html
@@ -38,27 +38,34 @@
           }
 
           // 判断字符串是否符合IP地址
-          function testIP(s){  
-            var arr=s.match(/^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$/);
-
+          function testIP(str){  
+            var arr = /^(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})$/.exec(str);
             if(arr==null) return false;  
+            arr.shift();
             for(i=1;i<arr.length;i++)if(String(Number(arr[i]))!=arr[i]||Number(arr[i])>255) return   false;  
             return   true;  
           }
+          alert( testIP2("192.16l8.1.1") );
+
           // 非正则版本
-          function testIP(s){  
+          function testIP2(s){  
             var arr=getStrNum(s);
-            if(arr==null) return false;  
+            if(arr==null || arr.length != 4) return false;  
             for(i=1;i<arr.length;i++)if(String(Number(arr[i]))!=arr[i]||Number(arr[i])>255) return false;  
             return   true;  
           }
           function getStrNum(str) {
-            var i, len, i_str, r = [];
+            var i, len, i_str, r = [], tmp_str = '';
             if (!str || str.length == 0) { return r; }
             for (i = 0, len = str.length; i < len; i++) {
               i_str = str.charAt(i);
-              if ( isNaN(i_str) && i_str != '.') { break; }
-              if (i_str != '.') { r.push(i_str); }
+              if ( isNaN(i_str) && i_str != '.') { r = null; break; }
+              if ( i_str != '.' && parseInt(i_str, 10) > 0 ) {
+                tmp_str += i_str;
+              } else if (i_str == '.') {
+                r.push(tmp_str); 
+                tmp_str = '';
+              } 
             } 
             return r;
           }
