--- a/gulp/canvas_test.html
+++ b/gulp/canvas_test.html
@@ -101,6 +101,11 @@
       <div id='noSupport'>
         <h3>您当前浏览器不支持 canvas标签， 请换一个浏览器试试！</h3>
       </div>
+      
+      <!-- build:js -->
+      <script type="text/javascript" src="js/concat_base.js"></script>
+      <script type="text/javascript" src="js/uglify_utils.js"></script>
+      <!-- endbuild -->
         
       <script>
         var div_list = document.getElementsByTagName('div');
