--- a/Date.html
+++ b/Date.html
@@ -43,6 +43,7 @@
               tdTime = toDay.getTime(),
               tomorrowTime;
 
+          // 一天时间的毫秒数
           var ONEDAY = 3600 * 24 * 1000;
 
           tomorrowTime = tdTime + ONEDAY;
