--- a/challenge_case/IE8_position.html
+++ b/challenge_case/IE8_position.html
@@ -8,6 +8,8 @@
         .nav_wrap .logo{ height: 52px; padding-top: 8px;}
         .nav_wrap .u_face{ padding-top: 30px; width: 60px; margin: 0 auto; cursor:pointer; }
         .nav_wrap .u_face img{ width: 60px; height: 60px; display: block; border-radius: 50%;}
+        
+        .nav_wrap .user_info{ height: 190px; text-align: center; color: #fff;position:relative; }
 
         /*弹出框内容*/
         .nav_wrap .u_info_pop{ display: none; position:absolute; left:110%; top:60px; width:310px; color:#000; text-align:left; padding:0px 10px; border: 1px solid #ccc;}
@@ -33,34 +35,37 @@
         <div class="u_face">
             <img id="uFace" src="../images/wteam_xq.jpg">
         </div>
-        <div class="u_info_pop" id="uInfoPop">
-            <div class="u_face">
-                <img src="../images/wteam_xq.jpg" alt="用户头像">
-            </div>
-            <ul class="u_pop_bd">
-                <li>
-                    <label>我的昵称：</label><input type="text" class="u_pop_nickname" value="wteam-xq11"><a href="#" id="editNickname" data-oldval="wteam-xq11">编辑</a>
-                </li>
-                <li>
-                    <span>我的 ID:</span><span class="bd_ml">qq-nojdyiqgex</span>
-                </li>
-                <li>
-                    <span>账户帆币:</span><span class="bd_ml">0帆币</span><button>充值</button>
-                </li>
-                <li>
-                    <span>账户帆豆:</span><span class="bd_ml">0帆豆</span><button>兑换</button>
-                </li>
-                <li>
-                    <span>财富等级:</span><span class="bd_ml">1</span> <span class="bd_ml">还差1000帆币</span> 
-                </li>
-                <li>
-                    <span>主播等级:</span><span class="bd_ml">1</span> <span class="bd_ml">还差1000帆豆</span> 
-                </li>
-            </ul>
-            <div class="u_pop_ft">
-                <a href="#" class="fl">个人中心</a><a href="#" class="fl ft_c">修改头像</a><a href="#" class="fr" id="closeUPop">退出</a>
+        <div class="user_info">
+            <div class="u_info_pop" id="uInfoPop">
+                <div class="u_face">
+                    <img src="../images/wteam_xq.jpg" alt="用户头像">
+                </div>
+                <ul class="u_pop_bd">
+                    <li>
+                        <label>我的昵称：</label><input type="text" class="u_pop_nickname" value="wteam-xq11"><a href="#" id="editNickname" data-oldval="wteam-xq11">编辑</a>
+                    </li>
+                    <li>
+                        <span>我的 ID:</span><span class="bd_ml">qq-nojdyiqgex</span>
+                    </li>
+                    <li>
+                        <span>账户帆币:</span><span class="bd_ml">0帆币</span><button>充值</button>
+                    </li>
+                    <li>
+                        <span>账户帆豆:</span><span class="bd_ml">0帆豆</span><button>兑换</button>
+                    </li>
+                    <li>
+                        <span>财富等级:</span><span class="bd_ml">1</span> <span class="bd_ml">还差1000帆币</span> 
+                    </li>
+                    <li>
+                        <span>主播等级:</span><span class="bd_ml">1</span> <span class="bd_ml">还差1000帆豆</span> 
+                    </li>
+                </ul>
+                <div class="u_pop_ft">
+                    <a href="#" class="fl">个人中心</a><a href="#" class="fl ft_c">修改头像</a><a href="#" class="fr" id="closeUPop">退出</a>
+                </div>
             </div>
         </div>
+        
     </div>
 
     <script type="text/javascript">
@@ -69,7 +74,11 @@
                 uInfoPop = document.getElementById('uInfoPop'),
                 closeUPop = document.getElementById('closeUPop');
             uFace.onclick = function () {
-                uInfoPop.style.display = 'block';
+                if (uInfoPop.style.display == '' || uInfoPop.style.display == 'none' ) {
+                    uInfoPop.style.display = 'block';
+                }else {
+                    uInfoPop.style.display = 'none';
+                } 
             }
             closeUPop.onclick = function() {
                 uInfoPop.style.display = 'none';
