--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -267,7 +267,29 @@
       
       <div class="demo-panel" v-show="showType == 2">
         <h1 class="buy-list-demo">2.购物列表(vue)</h1>
+        <form class="buy-list">
+          <fieldset>
+            <legend>购物车列表</legend>
+          </fieldset>
 
+          <ul>
+            <li v-repeat="demo2.goodList" data-price="{{price}}">
+              <input type="checkbox" name="{{id}}" class="sel_box" />
+              <label class="good-label">{{name}}</label>
+              <label>{{price}}元</label>
+              <div class="good-set">
+                <a href="javascript:void(0);" class="set-min">&nbsp;</a>
+                <input type="text" class="set-count" value="1" />
+                <a href="javascript:void(0);" class="set-add">+</a>
+              </div>
+            </li>
+          </ul>
+
+           <div class="buy-list-f">
+              <div class="good-total">0.00</div>
+              <button class="radius-btn">去支付</button>
+          </div>  
+        </form>
       </div>
 
       <div class="demo-panel" v-show="showType == 2.1">
@@ -365,7 +387,10 @@
                 'regStep': 1
               },
               demo2: {
-
+                goodList: [{'name':'商品1', 'price':'45', 'id':'good1'},
+                           {'name':'商品2', 'price':'56', 'id':'good2'},
+                           {'name':'商品3', 'price':'30', 'id':'good3'}
+                           ]
               },
               demo3: {
 
@@ -588,128 +613,6 @@
                 $regDemo.find('.btn-radius:first').show();
               }
             }
-          }
-
-          // 2.1 jq 实现购物车功能
-          function buyListInit(){
-            var $buyList = $('.buy-list'),
-                $buyStep1 = $('#buyStep1'),
-                $buyStep2 = $('#buyStep2');
-
-            $buyList.last().hide();
-            $buyStep1.find('.set-add').on('click', addGoodCount);
-            $buyStep1.find('.set-min').on('click', minGoodCount);
-            $buyStep1.find('.set-count').on('blur', inputBlur);
-            $buyStep1.find('#goBuy').on('click', confirmOrder);
-            $buyStep1.find('.sel_box').on('click', selGood);
-
-            $buyStep2.find('#goBack').on('click', goBack);
-
-            function selGood(e) {
-              refreshPrice();
-            }
-            function addGoodCount(e){
-              var $this = $(this),
-                  $input = $this.prev('input'),
-                  $li = $this.parents('li'),
-                  $minBtn = $this.siblings('.set-min'),
-                  $selBox = $li.find('.sel_box');
-
-              var inputVal = parseInt($input.val(), 10);
-              inputVal++;
-
-              if ( inputVal > 1 ){
-                $minBtn.html('-');
-              }
-              $input.val(inputVal);
-              if ( !$selBox.is(':checked') ){
-                $selBox.trigger('click');
-              } else {
-                refreshPrice();
-              }
-            }
-
-            function minGoodCount(e){
-              var $this = $(this),
-                  $input = $this.next('input'),
-                  $li = $this.parents('li'),
-                  $addBtn = $this.siblings('.set-add'),
-                  $selBox = $li.find('.sel_box');
-
-              var inputVal = parseInt($input.val(), 10);
-              if (inputVal <= 1) {
-                return false;
-              }
-              inputVal--;
-              if (inputVal <= 1) {
-                $this.html('&nbsp;');
-              }
-              $input.val(inputVal);
-              if ( !$selBox.is(':checked') ){
-                $selBox.trigger('click');
-              } else {
-                refreshPrice();
-              }
-            }
-
-            function refreshPrice(){
-              var totalPrice = 0.00,
-                  $ul = $buyStep1.find('ul');
-
-              $ul.find('li').each(function(i, n){
-                var $li = $(n),
-                    price = parseFloat( $li.attr('data-price') ),
-                    count = parseInt( $li.find('.set-count').val(), 10 );
-
-                if ( $li.find('.sel_box').is(':checked') ) {
-                  totalPrice += price * count;
-                }
-
-              });
-              $buyStep1.find('.good-total').text( totalPrice.toFixed(2) );
-            }
-            // 保证输入框输入为数字
-            function inputBlur(e){
-              var $this = $(this),
-                  inputVal = $this.val(),
-                  $selBox = $this.parents('li').find('.sel_box');
-                  $minBtn = $this.siblings('.set-min');
-
-              // Number() parseInt() 区别，N 判断整个整数，而p只判断前半部分数字
-              // 如：Number('78n') -> NaN, parseInt('78n') -> 78
-              if ( isNaN( Number(inputVal) ) ) {
-                $this.val(1);
-                $minBtn.html('-');
-                alert('价格必须为数字!');
-                return false;
-              }
-              if ( inputVal > 1 ){
-                $minBtn.html('-');
-              } else {
-                $minBtn.html('&nbsp;');
-              }
-              if ( !$selBox.is(':checked') ){
-                $selBox.trigger('click');
-              } else {
-                refreshPrice();
-              }
-            }
-            // 确认订单步骤
-            function confirmOrder(){
-              $buyStep1.hide();
-
-              
-              $buyStep2.show();
-
-              return false;
-            }
-            function goBack(){
-              $buyStep2.hide();
-              $buyStep1.show();
-
-              return false;
-            }
-
           }
 
         });
